vlib/v/parser/tests/register_imported_alias.vv
import time { Duration }
type Duration = bool
